--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 24px;
 }
 
 form {
@@ -40,4 +41,8 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   background-color: #45a049;
+}
+
+#userData {
+  font-size: 18px;
 }
