--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
-h1 {
-  color: #333;
+body {
+  font-family: Arial, sans-serif;
+  text-align: center;
 }
 
-p {
-  font-size: 18px;
-  font-weight: bold;
-  color: #666;
+h1 {
+  margin-top: 50px;
+}
+
+#userInfo {
+  margin-top: 50px;
 }
