--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,60 @@
-body {
-  font-family: Arial, sans-serif;
-  text-align: center;
+html {
+  font-size: 20px;
 }
 
+/* 標題 */
 h1 {
-  margin-top: 50px;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
 }
 
-#userInfo {
-  margin-top: 50px;
+/* 表單 */
+form {
+  font-size: 18px;
+  margin: 20px auto;
+  max-width: 350px;  /* 調整寬度為較小的值 */
+  padding: 20px;
+  background-color: #f7f7f7;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+form input[type="text"],
+form input[type="date"],
+form input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box; /* 確保內邊距不會增加元素的寬度 */
+}
+
+
+form input[type="submit"] {
+  width: auto;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* 使用者資料 */
+#userData {
+  font-size: 20px;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
